# rag-fabric-docs

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: benchmark.py  ingest.py  query.py  query_v2.py
