[project]
name = "3-rag-fabric-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "chromadb>=1.5.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "voyageai>=0.3.7",
    "rank-bm25>=0.2.2",
]
